Microservicio corregido. Se guardan imágenes base64. api.yml actualizado.
