# api.yml
@@ -7,7 +7,7 @@ info:
   description: Ruby on Rails + PostgreSQL
   license:
     name: Software Architecture, 2019-I
-host: 192.168.99.103:3000
+host: 192.168.99.101:3002
 basePath: /
 schemes:
   - http
@@ -103,26 +103,31 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/ErrorModel'
-  
-  /base64{id}:
+            
+  /typeownerimages{imageabletype}{imageableid}:
     get:
-      summary: Obtain an image (base64) by ID
-      operationId: getBase64
+      summary: Obtain an image by owner ID and type
+      operationId: imageByOwnerAndType
       parameters:
-        - name: id
+        - name: imageableid
           in: path
-          description: Id of the image to obtain
+          description: Owner's ID of the desired image
+          required: true
+          type: integer
+        - name: imageabletype
+          in: path
+          description: Type of the desired image
           required: true
           type: integer
       responses:
         '200':
-          description: Image (Base64) has been obtained successfully
+          description: Images has been obtained successfully
           schema:
-            $ref: '#/definitions/ImageBase64'
-        '404':
-          description: Image not found
+            $ref: '#/definitions/Image'
+        '204':
+          description: No images
           schema:
-            $ref: '#/definitions/ErrorModel'
+            $ref: '#/definitions/WarningModel'
         '500':
           description: Internal Server Error
           schema:
@@ -189,19 +194,6 @@ definitions:
 
   # Images
   Image:
-    type: object
-    properties:
-      id:
-        type: integer
-      content:
-        type: string
-      imageableid:
-        type: integer
-      imageabletype:
-        type: string
-        
-  # Base64 Images
-  ImageBase64:
     type: object
     properties:
       id:
